Fix alignment and size of reminder text for mobile.

--- a/_sass/_offer-promo-tile.scss
+++ b/_sass/_offer-promo-tile.scss
@@ -45,6 +45,9 @@
         display: inline-block;
         text-align: right;
         float: left;
+        @include media-breakpoint-down(md) {
+            text-align: center;
+        }
         h4 {
         color: $hover-green !important;
         font-family: $headings_font;
@@ -59,6 +62,9 @@
                 font-size: 20px;
                 color:#ed1c25;
             }
+        @include media-breakpoint-down(md) {
+            font-size: 1.8rem;
+        }
         }
         i {
             color:#999999;
